--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
                     </li>
                     <li class="nav-item" id="resume-button-li">
-                        <a id="resume-button" class="js-scroll-trigger" href="https://linkedin.com/in/girishkumarpatchikoru">Resume</a>
+                        <a id="resume-button" class="js-scroll-trigger" href="https://girishf9.github.io/girish_kumar_patchikoru.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
