--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <!-- Texas a&m Services -->
                 <div class="row justify-content-center no-gutters bg-black mb-5 mb-lg-0">
                     <div class="col-lg-2 text-center">
-                        <img class="circularlogo" src="public/img/tamucclo.svg" alt="tamucclogo.svg" height="200">
+                        <img class="circularlogo" src="public/img/" alt="tamucclogo.svg" height="200">
                     </div>
                     <div class="col-lg-10">
                         <div class="bg-black text-center h-100 project">
