--- a/index.html
+++ b/index.html
@@ -125,17 +125,14 @@
                                         <h4 class="text-white">Information Technology Student Worker</h4>
                                         <p class="text-white">May 2024 – Present</p>
                                         <ul class="mb-0 text-white-50">
-                                            <li>Technical Support & Troubleshooting: Provide prompt and effective IT assistance via phone, remote tools, and face-to-face interactions.
-                                                Diagnose and resolve issues related to classroom technology, conference room systems, software applications, network connectivity, and
-                                                hardware.</li>
-                                            <li>Incident Management: Utilize call management and ticketing systems to log, track, and prioritize service requests. Ensure timely resolution
-                                                of classroom and conference room emergencies to support uninterrupted academic and business operations.</li>
-                                            <li>On-Site & Remote Assistance: Respond to urgent in-person support requests across campus while offering remote troubleshooting for
-                                                quick issue resolution.</li>
-                                            <li>Walk-In Support: Assist clients visiting the Service Desk, addressing their technical needs or escalating complex cases to appropriate IT
-                                                teams.</li>
-                                            <li>Ticket Resolution: Monitor and follow up on unresolved tickets, ensuring proper escalation, documentation, and closure within established
-                                                service-level agreements (SLAs).</li>
+                                            <li>Managed and optimized: University database systems by implementing efficient query structures and stored procedures,
+reducing average query response time by 35% and improving overall system performance for student registration processes.</li>
+                                            <li>Provided technical support: For database-related issues to faculty, staff, and students, troubleshooting SQL connectivity
+problems, resolving data access permissions, and ensuring seamless integration between database systems and web
+applications.</li>
+                                            <li>Developed comprehensive documentation: For database structures and maintenance procedures, creating user guides
+that improved data integrity practices and reduced user errors by 40% across academic departments.</li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
