--- a/index.html
+++ b/index.html
@@ -137,20 +137,13 @@
                     <p class="text-white">May 2024 – Present</p>
                     <ul class="mb-0 text-white-50">
                       <li>
-                        Managed and optimized: University database systems by implementing efficient query structures
-                        and stored procedures, reducing average query response time by 35% and improving overall system
-                        performance for student registration processes.
+                       Coordinated timely resolution: Managed and resolved support requests from faculty, staff, and students via phone, email, or on-site,
+ensuring efficient issue resolution and dispatching specialists as needed..
                       </li>
                       <li>
-                        Provided technical support: For database-related issues to faculty, staff, and students,
-                        troubleshooting SQL connectivity problems, resolving data access permissions, and ensuring
-                        seamless integration between database systems and web applications.
-                      </li>
-                      <li>
-                        Developed comprehensive documentation: For database structures and maintenance procedures,
-                        creating user guides that improved data integrity practices and reduced user errors by 40%
-                        across academic departments.
-                      </li>
+                        Technical troubleshooting & training: Assisted students with registration and online courses, resolved hardware/software issues,
+troubleshot network connectivity problems, and trained users on hardware/software usage.  </li>
+                     
                     </ul>
                   </div>
                 </div>
