--- a/index.html
+++ b/index.html
@@ -421,21 +421,21 @@
       <!-- Financial Data API -->
       <div class="project-card">
         <div class="project-image-container">
-          <img class="project-image" src="public/img/financial-api.jpg" alt="Financial API Project">
+          <img class="project-image" src="public/img/employeemanagement.png" alt="Employee Management Portal">
           <div class="project-overlay">
-            <div class="overlay-icon" onclick="openImageModal('public/img/financial-api.jpg', 'Financial API Project')" title="View Full Image">
+            <div class="overlay-icon" onclick="openImageModal('public/img/employeemanagement1.png', 'Employee Management Portal')" title="View Full Image">
               <i class="bi bi-plus-circle"></i>
             </div>
-            <a href="https://github.com/gpatchikoru/financial-api" class="overlay-icon" target="_blank" title="View Code">
+            <a href="https://github.com/gpatchikoru/employee-management-portal" class="overlay-icon" target="_blank" title="View Code">
               <i class="fab fa-github"></i>
             </a>
           </div>
           <div class="tech-tags">
-            <div class="tech-text">Spring Boot, PostgreSQL, REST API, JWT, Microservices</div>
+            <div class="tech-text">React, frontend,  Tailwind, Recharts, JSON</div>
           </div>
         </div>
         <div class="project-content">
-          <h4 class="project-title">RESTful Financial Data API</h4>
+          <h4 class="project-title">Employee Management Portal</h4>
         </div>
       </div>
 
