--- a/index.html
+++ b/index.html
@@ -185,15 +185,16 @@
             <span class="experience-date"><i class="fas fa-calendar-alt"></i> June 2024 – May 2025</span>
           </div>
           <div class="experience-content">
-            <p>Coordinated timely resolution of support requests from faculty, staff, and students via phone, email, or on-site, ensuring efficient issue resolution and dispatching specialists as needed.</p>
             <ul>
-              <li>Technical troubleshooting & training: Assisted students with registration and online courses, resolved hardware/software issues</li>
-              <li>Troubleshot network connectivity problems, and trained users on hardware/software usage</li>
+              <li>Resolved support requests from faculty/staff via phone, email, and on-site.</li>
+              <li>Provided technical training and troubleshooting for network and software issues</li>
             </ul>
             <div class="skills-tags">
               <span class="skill-tag">Technical Support</span>
               <span class="skill-tag">Network Troubleshooting</span>
               <span class="skill-tag">User Training</span>
+              <span class="skill-tag">Database</span>
+              <span class="skill-tag">SQL</span>
             </div>
           </div>
         </div>
@@ -212,14 +213,14 @@
           </div>
           <div class="experience-content">
             <ul>
-              <li>Enhanced customer-facing web applications using React/Next.js, reducing page load times by 40% and carbon emissions by 20%</li>
-              <li>Implemented a modular component library with Redux, improving developer productivity by 30%</li>
-              <li>Integrated Power BI dashboards for 5,000+ active users, increasing user retention by 25%</li>
+              <li>Optimized React/Next.js apps, cutting page-load times by 40 % and lowering carbon emissions by 20 %.</li>
+              <li>Built a Redux component library and embedded Power BI dashboards for 5 k+ users, boosting developer productivity by 30 % and user retention by 25 %</li>
             </ul>
             <div class="skills-tags">
               <span class="skill-tag">React/Next.js</span>
               <span class="skill-tag">Redux</span>
               <span class="skill-tag">Power BI</span>
+              <span class="skill-tag">Web Performance Optimization</span>
             </div>
           </div>
         </div>
@@ -238,16 +239,15 @@
           </div>
           <div class="experience-content">
             <ul>
-              <li>Backend Optimization & Automation – Led optimization efforts within the Core Platform DevOps team, reducing backend workload and improving system efficiency</li>
-              <li>Feature Development & Efficiency Boost – Introduced a new feature in the ICMversion section of Build Deployment using a String feature</li>
-              <li>System Stability & Data Management – Designed a Backup & Deletion strategy for the Operational Data Store (ODS)</li>
-              <li>Cross-Team Collaboration & Issue Resolution – Provided critical support to 50+ internal product and delivery teams</li>
+              <li>Automated backend DevOps pipelines and introduced new deployment features to improve efficiency</li>
+              <li>Designed ODS backup/deletion strategy and supported 50+ internal teams across the product lifecycle.</li>
             </ul>
             <div class="skills-tags">
               <span class="skill-tag">DevOps</span>
               <span class="skill-tag">Automation</span>
               <span class="skill-tag">Power BI</span>
               <span class="skill-tag">Data Management</span>
+              <span class="skill-tag">Team Collaboration</span>
             </div>
           </div>
         </div>
@@ -266,15 +266,15 @@
           </div>
           <div class="experience-content">
             <ul>
-              <li>Legacy Modernization: Led migration of a monolithic telecom application (100K+ users) to a Spring Boot microservices architecture, improving API throughput by 35%</li>
-              <li>Performance Tuning: Upgraded a 7,000-line JavaScript codebase to ES6 standards, reducing runtime memory usage by 25%</li>
-              <li>Database Optimization: Restructured Oracle DB schemas and queries, reducing average query latency from 2s to 200ms</li>
+              <li>Migrated a monolithic telecom system to Spring Boot microservices, increasing API throughput by 35%.</li>
+              <li>Upgraded 7,000-line JavaScript codebase and restructured Oracle DB, cutting latency from 2s to 200ms.</li>
             </ul>
             <div class="skills-tags">
               <span class="skill-tag">Java</span>
               <span class="skill-tag">Spring Boot</span>
               <span class="skill-tag">Microservices</span>
               <span class="skill-tag">Oracle DB</span>
+              <span class="skill-tag">Performance Tuning</span>
             </div>
           </div>
         </div>
