--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
   </div>
 </div>
 
-<div class="position-section">
+<!-- <div class="position-section">
   <div class="position-item">
     <i class="bi bi-chevron-right detail-chevron"></i>
     <span class="detail-label">Past Position:</span>
     <span class="detail-value">Information Technology Student Worker @ TAMUCC</span>
   </div>
-</div>
+</div> -->
           
           <p class="about-description" style="margin-top: 2rem;">
             When I'm not coding or studying, you'll find me contributing to open-source projects, exploring emerging technologies, and participating in hackathons. Creativity is at the core of who I am, and I believe in using it to enrich lives and solve challenges.
@@ -178,7 +178,7 @@
             <img class="company-logo" src="public/img/tamucclogo.svg" alt="TAMU-CC Logo">
             <div>
               <h3>Texas A&M University-Corpus Christi</h3>
-              <div class="position-title">Information Technology Student Worker</div>
+              <div class="position-title">Information Technology Graduate Student Assistance</div>
             </div>
           </div>
           <div class="experience-meta">
@@ -186,13 +186,16 @@
           </div>
           <div class="experience-content">
             <ul>
-              <li>Resolved support requests from faculty/staff via phone, email, and on-site.</li>
-              <li>Provided technical training and troubleshooting for network and software issues</li>
+              <li>Developed and maintained SQL-based data pipelines to ingest, transform, and securely store student records, achieving 99.95.</li>
+              <li>Collaborated with cross-functional teams to align data integration processes with FERPA compliance and enterprise data
+security standards using AWS KMS and role-based access controls</li>
+              <li>Authored and maintained technical documentation to support pipeline onboarding, metadata management, and entity reso-
+lution across web applications</li>
             </ul>
             <div class="skills-tags">
               <span class="skill-tag">Technical Support</span>
               <span class="skill-tag">Network Troubleshooting</span>
-              <span class="skill-tag">User Training</span>
+              <span class="skill-tag">Postsql</span>
               <span class="skill-tag">Database</span>
               <span class="skill-tag">SQL</span>
             </div>
