--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <img class="company-logo" src="public/img/tamucclogo.svg" alt="TAMU-CC Logo">
             <div>
               <h3>Texas A&M University-Corpus Christi</h3>
-              <div class="position-title">Information Technology Graduate Student Assistance</div>
+              <div class="position-title">Information Technology Graduate Student Assistant</div>
             </div>
           </div>
           <div class="experience-meta">
