--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   <img class="company-logo" src="public/img/tamucclogo.svg" alt="TAMU-CC Logo">
                   <div class="company-details">
                     <h3>Texas A&M University-Corpus Christi</h3>
-                    <div class="position-title">Information Technology Graduate Student Assistant</div>
+                    <div class="position-title">Information Technology Graduate Student worker</div>
                     <div class="experience-period">
                       <i class="fas fa-calendar-alt"></i> June 2024 – May 2025
                     </div>
