--- a/index.html
+++ b/index.html
@@ -327,9 +327,10 @@
               </div>
               <div class="experience-content">
                 <ul>
-                  <li>Developed and maintained SQL-based data pipelines to ingest, transform, and securely store student records, achieving 99.95% uptime.</li>
-                  <li>Collaborated with cross-functional teams to align data integration processes with FERPA compliance and enterprise data security standards using AWS KMS and role-based access controls</li>
-                  <li>Authored and maintained technical documentation to support pipeline onboarding, metadata management, and entity resolution across web applications</li>
+<li>Manage technical support for 7,000+ faculty, staff, and students, implemented ticketing systems and escalation protocols that improved resolution time
+by 50%</li>
+<li>Conduct training sessions on enterprise applications and troubleshoot complex network connectivity issues across campus infrastructure•
+Provide on-site support and dispatch specialists for hardware/software problems, ensuring efficient issue resolution and user satisfaction</li>
                 </ul>
                 <div class="skills-tags">
                   <span class="skill-tag">Technical Support</span>
